--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body {
     padding-left: 15px;
     text-indent: -1000px;
     background: #293449 url("../img/icon-exit.png/sprite.png") no-repeat;
-    background-position: -5px -184px;
+    background-position: -5px -259px;
     border: none;
     opacity: 0.3;
  }
@@ -150,8 +150,8 @@ body {
 	position: absolute;
 	top: 14px;
 	left: 14px;
-	width: 11px;
-    height: 10px;
+	width: 14px;
+    height: 16px;
 	background: #293449 url("../img/icon-exit.png/sprite.png") no-repeat; 
 	background-position: -5px -31px;
 	opacity: 0.3;
@@ -165,7 +165,7 @@ body {
     height: 16px;
 	background: #293449 url("../img/icon-exit.png/sprite.png") no-repeat; 
 	background-position: -5px -5px;
-	opacity: 0.3;
+    opacity: 0.3;
 }
 .header-top__bookmark:hover::before {
     opacity: 1;
@@ -198,7 +198,8 @@ body {
 	margin-right: 20px;
 	
 }
-.header-middle__phone{
+.header-middle__phone {
+	position: relative;
 	display: block;
 	width: 193px;
 	height: 42px;
@@ -207,6 +208,16 @@ body {
 	padding-top: 11px;
 	border: 4px solid #ffffff;
 	color: #e9292a;
+}
+.header-middle__phone::before {
+	content: "";
+	position: absolute;
+	top: 16px;
+	left: 13px;
+	background: #f2f6f8 url("../img/icon-exit.png/sprite.png");
+	width: 19px;
+    height: 19px;
+    background-position: -5px -208px;
 }
 .header-middle__contact p {
 	font-size: 14px;
@@ -252,6 +263,8 @@ body {
 .header-middle__user a:hover {
     color: #f0515c;
 }
+
+
 .header-middle__user a:active {
     color: #b2b2b2;
 }
@@ -263,11 +276,21 @@ body {
 	background: #fff url("../img/icon-exit.png/sprite.png") no-repeat;
 	width: 21px;
     height: 17px;
-    background-position: -5px -128px; 
+    background-position: -5px -181px;
+}
+.header-middle__user:hover .icon-enter::before {
+	content: "";
+	position: absolute;
+	top: 14px;
+	left: 14px;
+	background: #fff url("../img/icon-exit.png/sprite.png") no-repeat;
+	width: 20px;
+    height: 17px;
+    background-position: -5px -77px;
 }
 .header-middle__users {
+	position: relative;
 	width: 300px;
-	
 }
 
 .header-middle__users p {
@@ -282,6 +305,67 @@ body {
 	box-sizing: border-box;
 	color: #000000;
 	background-color: #ffffff;
+}
+.header-middle__users p:active {
+	color: #b2b2b2;
+}
+.header-middle__users p::before {
+    content: "";
+    position: absolute;
+    top: 14px;
+    left: 14px;
+    background: #fff url("../img/icon-exit.png/sprite.png");
+    width: 20px;
+    height: 18px;
+    background-position: -5px -306px;
+}
+.header-middle__users p::before {
+    content: "";
+    position: absolute;
+    top: 14px;
+    left: 14px;
+    background: #fff url("../img/icon-exit.png/sprite.png");
+    /*надо вставить иконку*/
+}
+.header-middle__users p::before {
+    content: "";
+    position: absolute;
+    top: 14px;
+    left: 14px;
+    background: #fff url("../img/icon-exit.png/sprite.png");
+    width: 20px;
+    height: 18px;
+    background-position: -5px -306px;
+}
+.header-middle__users p::after {
+	content: "";
+    position: absolute;
+    top: 14px;
+    left: 268px;
+    background: #fff url("../img/icon-exit.png/sprite.png");
+    width: 21px;
+    height: 17px;
+    background-position: -5px -181px;
+}
+.header-middle__users:hover p::after {
+	content: "";
+    position: absolute;
+    top: 14px;
+    left: 268px;
+    background: #fff url("../img/icon-exit.png/sprite.png");
+    width: 20px;
+    height: 17px;
+    background-position: -5px -77px;
+}
+.header-middle__users:active p::after {
+	content: "";
+    position: absolute;
+    top: 14px;
+    left: 268px;
+    background: #fff url("../img/icon-exit.png/sprite.png");
+    width: 21px;
+    height: 17px;
+    background-position: -5px -181px;
 }
 .header-middle__data {
 	width: 300px;
@@ -305,9 +389,13 @@ body {
 	font-size: 16px;
 	line-height: 18px;
 	font-family: "Cuprum", "Arial", sans-serif;
-	color: #000000;
-
-
+	color: #32425c;
+}
+.header-middle__data a:hover {
+    color: #ee434f;
+}
+.header-middle__data a:active{
+    color: #b7bfc8;
 }
 .main-navigation {
 	clear: both;
@@ -386,6 +474,7 @@ body {
 .main-tabs__left .foto-block__buttons:first-child {
 	margin-right: 20px;
 	background-color: #f6b22d;
+	
 }
 .main-tabs__left .foto-block__buttons:nth-child(2){
     background-color: #4aafde;
@@ -527,9 +616,20 @@ body {
     border-radius: 3px;
     text-align: center;
     padding-top: 9px;
+    background-color: #000;
+    opacity: 0.1;
     color: #ffffff;
-    background-color: #dda028;
  }
+ .foto-block__buttons .slogan:hover {
+ 	background-color: #000;
+    opacity: 0.3;
+    color: #ffffff;
+ }
+  .foto-block__buttons .slogan:active {
+  	background-color: #000;
+    opacity: 0.5;
+    color: #ffffff;
+  }
 .main-tabs__left .foto-block__buttons .slogan:nth-child(2) {
  	background-color: #429dc7;
  }
@@ -542,6 +642,7 @@ body {
  .main-tabs__right .foto-block__buttons:last-child .slogan {
  	background-color: #dda028;
  }
+ 
 .foto-block__slider {
 
 }
@@ -599,32 +700,29 @@ body {
 	border: 1px solid #e5e5e5;
 	text-align: center;
 	background-color: #ffffff no-repeat 0px 50px;
+	overflow: hidden;
 }
 .catalog__item:nth-child(4) {
 	margin-right: 0;
 }
 .label {
-	position: absolute;
-	display: block;
-	top: -1px;
-	right: -1px;
-	width: 75px;
-	height: 28px;
-	padding-left: 20px;
-	font-size: 16px;
-	font-family: "Sans", "Arial", sans-serif;
-	transform: rotate(45deg);
-	z-index: 20;
-	background-color: #ee3643;
-	overflow: hidden;
+	position:absolute;
+    top: -1px;
+    right: -1px;
+    width: 60px;
+    height: 60px;
+    text-indent: -1000px;
+    overflow: hidden;
+    z-index: 20;
+    background: url("../img/icon-exit.png/label3.png") no-repeat 0 0;
 }
-
 .catalog__item a {
 	display: block;
 	min-height:20px;
     padding:0 20px;
     margin-top:10px;
     margin-bottom:15px;
+    text-decoration: none;
     color: #000000;
 }
 .item__old-price{
@@ -635,25 +733,26 @@ body {
     color: #d6d6d6;
 }
 .item__price {
-	position:relative;
-    width:80px;
-    margin:10px auto;
-    margin-bottom:20px;
-    padding:10px 30px;
-    color:white;
-    background:#ee3643;
-    border-radius:3px;
+	position: relative;
+    width: 80px;
+    margin: 10px auto;
+    margin-bottom: 20px;
+    padding: 10px 30px;
+    color: white;
+    background: #ee3643;
+    border-radius: 3px;
 }
 .item__price:after {
-	content:"";
-    position:absolute;
-    top:0;
-    right:-20px;
-    width:0;
-    height:0;
-    border:20px solid white;
-    border-left-color:#ee3643;
+	content: "";
+    position: absolute;
+    top: 0;
+    right: -20px;
+    width: 0;
+    height: 0;
+    border: 20px solid white;
+    border-left-color: #ee3643;
 }
+
 .main-manufactures {
 	min-height: 310px;
 	margin-bottom: 85px;
@@ -661,12 +760,11 @@ body {
 	
 }
 .main-manufactures__branded-sign{
-	position: relative;
 	display: inline-block;
 	vertical-align: top;
-	position: relative;
-	width: 217px;
-	height: 145px;
+	width: 174px;
+	height: 112px;
+	padding: 19px 18px;
 	margin-right: 20px;
 	margin-bottom: 20px;
 	border: 1px solid #e7e7e7;
@@ -677,28 +775,8 @@ body {
 }
 .main-manufactures__branded-sign a {
 	text-decoration: none;
-	
 }
-.main-manufactures__branded-sign img {
-	position: absolute;
-	top: 50px;
-	left: 40px;
 
-}
-.main-manufactures__branded-sign:nth-child(4) img {
-	top: 30px;
-    left: 10px;
-}
-.main-manufactures__branded-sign:nth-child(5) img {
-    left: 30px;
-}
-.main-manufactures__branded-sign:nth-child(7) img {
-	top: 30px;
-}
-.main-manufactures__branded-sign:nth-child(8) img {
-	top: 40px;
-	left: 10px;
-}
 .main-services {
 	min-height: 520px;
 	background-color: #f2f6f8;
@@ -726,10 +804,13 @@ body {
 }
 .services__menu {
 	float: left;
-	width: 300px;
+	width: 265px;
+	padding-top: 35px;
 	min-height: 271px;
 	margin-right: 20px;
 	margin-bottom: 46px;
+	background: url("../img/services-img.png/line.png") no-repeat 230px 0px;
+
 }
 .services__menu a {
 	display: block;
@@ -749,12 +830,15 @@ body {
 .services__menu a:active {
 	color: #32425c;
 	background-color: #ffffff;
+
 }
+
 .services__items {
 	position: relative;
 	float: right;
 	min-width: 620px;
 	min-height: 271px;
+	padding-top: 40px;
 	margin-bottom: 46px;
 
 }
@@ -771,10 +855,31 @@ body {
     font-weight: normal;
     color: #000000;
 }
-.services__item  img {
+.services__item  .figure {
     position: absolute;
     top: 20px;
     left: 400px;
+}
+.services__item .shedow {
+	position: absolute;
+	top: 50px;
+	left: 150px;
+}
+.services__item .application {
+	display: block;
+	width: 195px;
+	height: 28px;
+	margin-top: 30px;
+	padding-top: 10px;
+	font-size: 14px;
+	line-height: 18px;
+	font-family: "Cuprum", "Arial", sans-serif;
+	font-weight: normal;
+	text-decoration: none;
+	text-align: center;
+	color: #fff;
+	background-color: #ee3643;
+	border-radius: 2px;
 }
 .main__left-block {
 	float:left;
@@ -812,8 +917,13 @@ body {
 	line-height: 20px;
     font-weight: bold;
     margin-bottom: 20px;
-	
+	list-style: none;
 }
+.list-styled a::before {
+	content: "";
+	background: url("../img/services-img.png/red-line.png") no-repeat;
+}
+	
 .list-styled a {
 	text-decoration: none;
 	color: #000000;
@@ -1004,8 +1114,7 @@ body {
 	float: left;
 	width: 241px;
 	height: 95px;
-	margin-right: 20px;
-	margin-top:  20px; 
+	margin-top:  40px; 
 	
 }
 .informaition__share .social {
@@ -1015,34 +1124,41 @@ body {
 	margin-right: 4px;
 	font-size: 0;
     vertical-align: top;
-    
     text-align: center;
     background-color: #212a3a;
     position: relative;
+    border-radius: 50%
+
+}
+.informaition__share .social:hover {
+    background-color: #ee3643;
+}
+.informaition__share .social:active {
+    background-color: #ee3643;
 }
 .informaition__share .social::before {
 	content: "";
     position: absolute;
-    top:50%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50% -50%);
+    transform: translate(-50%,-50%);
     background-image: url("../img/icon-exit.png/sprite.png");
     background-repeat: no-repeat;
 }
 .social-vk::before {
     width: 20px;
     height: 12px;
-    background-position: -5px -259px;
+    background-position: -5px -334px;
 }
 .social-fb::before {
     width: 10px;
     height: 18px;
-    background-position: -5px -51px;
+    background-position: -5px -104px;
 }
 .social-in::before {
     width: 17px;
     height: 17px;
-    background-position: -5px -101px;
+    background-position: -5px -154px;
 }
 .informaition__contact {
 	float: left;
@@ -1124,16 +1240,31 @@ body {
 .breadcrumbs {
 	min-height: 20px;
 	margin-bottom: 20px;
-	background-color: #2d3bf6;/*только для наглядности*/
+	
 }
 .breadcrumbs ul {
-    
+    position: relative;
 
 }
 .breadcrumbs li {
     display: inline-block;
     vertical-align: top;
-
+    margin-right: 38px;
+}
+.breadcrumbs .icon {
+    width: 15px;
+    height: 12px;
+    background-position: -5px -132px;
+}
+.breadcrumbs .icon::after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 16px;
+	background: url("../img/icon-exit.png/sprite.png");
+	width: 8px;
+    height: 12px;
+    background-position: -5px -237px;
 }
 .breadcrumbs a {
     font-size: 13px;
@@ -1168,7 +1299,8 @@ body {
 	
 }
 .catalog-filter .filter__h2 {
-	height: 40px;
+	height: 14px;
+	padding: 13px 17px;
 	font-size: 13px;
 	line-height: 18px;
 	font-family: "Sans", "Arial", sans-serif;
@@ -1235,7 +1367,6 @@ body {
     text-align: center;
     color: #000000;
     border-radius: 5px;
-    color: white;
 }
 .min-price{
     margin-right: 25px;
@@ -1254,8 +1385,8 @@ body {
 	margin: 17px 0; 
 	position: relative;
 	padding-left: 35px;         	
-    font-size: 17px;
-    line-height: 30px;
+    font-size: 15px;
+    line-height: 20px;
     font-family: "Sans", "Arial", sans-serif;
     font-weight: normal;
     color: #000000;
@@ -1342,7 +1473,7 @@ body {
 .catalog-sorting {
     height: 40px;
     margin-bottom: 20px;
-    background-color: #ee3643;/*только для наглядности*/
+    background-color: #f7f3ec;
 }
 .catalog-sorting__h3 {
 	float: left;
@@ -1351,11 +1482,13 @@ body {
 	font-size: 13px;
 	line-height: 18px;
 	font-family: "Sans", "Arial", sans-serif;
+	font-weight: normal;
 	color: #000000;
 }
 .catalog-sorting ul {
 	float: left;
 	width: 480px;
+	margin-top: 10px;
 }
 .catalog-sorting li {
 	display: inline-block;
@@ -1364,14 +1497,33 @@ body {
 }
 .catalog-sorting a {
 	text-decoration: none;
+	text-transform: uppercase;
+    font-size: 13px;
+	line-height: 18px;
+	font-family: "Sans", "Arial", sans-serif;
 	color: #acaaa5;
+	border-bottom: 1px dotted #ee3643;
+}
+.catalog-sorting a:hover {
+    color: #000;
+    border-bottom: 1px solid #ee3643;
+} 
+.catalog-sorting a:active {
+    border-bottom: none;
+    color: #ee3643;
 }
 .catalog-sorting__guides {
 	float: right;
 	width: 80px;
+	margin-top: 10px;
+}
+.catalog-sorting__guides a {
+	margin-right: 20px;
+	text-decoration: none;
+	border-bottom: none;
 }
 .catalog-list {
-	min-height: 995px;
+	min-height: 700px;
     margin-bottom: 52px;
     font-size:0;
     
@@ -1391,51 +1543,139 @@ body {
 	border: 1px solid #e5e5e5;
 	text-align: center;
 	background-color: #ffffff no-repeat 0px 50px;
-}
-.catalog-list__item:nth-child(3n) {
-	margin-right: 0;
-}
-
-.foto-prodact{
-	height: 168px;
 	overflow: hidden;
 }
-.catalog-list__item .item__hidden {
-	display: none;
+.catalog-list__item:nth-child(3n) {
+    margin-right: 0;
+}
+.catalog-list__item .flag {
+    position: absolute;
+    top: -1px;
+    right: -1px;
+    width: 60px;
+    height: 60px;
+    text-indent: -1000px;
+    overflow: hidden;
+    z-index: 20;
+}
+.flag-new {
+    background: url("../img/icon-exit.png/label3.png") no-repeat 0 0;
+}
+.item__actions  {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 218px;
+    height: 83px;
+    padding: 20px 0;
+    background-color: #fff;
+    z-index: 10;
+}
+.item__actions .buy, .item__actions .bookmark {
+	position: relative;
+    display: block;
+    width: 129px;
+    height: 18px;
+    margin: 0 auto;
+    margin-bottom: 7px;
+    padding: 7px 0;
+    border: 3px solid #63a63e;
+    border-bottom-color: #367315; 
+    background-color: #63a63e;
+    color: #fff;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: normal;
+    font-family:"Cuprum", sans-serif;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: 3px;
+}
+.item__actions .bookmark {
+	color: #32425c;
+	background: #fff;
+	border-bottom-color: #63a63e;
+}
+.catalog-list__item .item__actions {
+    display:none;
+}
+.catalog-list__item:hover .item__actions {
+	display: block;
+}
+.item__actions .bookmark {
+    color:#32425c;
+    background:white;
+    border-bottom-color:#63a63e;
+}
+/*.item__actions .buy {
 	position: absolute;
 	top: 0;
-	left: 0;
-	width: 218px;
-	height: 168px;
-	padding: 40px 0;
-	background-color:  #fff;
+    left: 0;
+	width: 17px;
+    height: 16px;
+    background-position: -5px -5px;
+	background-image: url("../img/icon-exit.png/sprite.png");
+}*/
+.item__actions .buy:hover {
+    background-color: #5fbb2d;
 }
-.item__hidden .buy, 
-.item__hidden .bookmark {
-	font-family: "Cuprum", "Arial", sans-serif;
-	font-size: 14px;
-	display: block;
-	width: 135px;
-	margin: 0 auto 7px;
-	padding: 10px 0;
-	text-decoration: none;
-	text-transform: uppercase;
-	color: #fff;
-	border-radius: 3px;
-	background-color: #63a63e;
+.item__actions .buy:active {
+	background-color: #518534;
 }
-.item__hidden .buy {
-	box-shadow: inset 0 -3px 0 #367315;
+.item__actions .bookmark:hover  {
+    border-color: #32425c;
 }
-.item__hidden .bookmark {
-	width: 129px;
-    padding: 7px 0;
-    color: #63a63e;
-    border: 3px solid #63a63e;
-    background-color: #fff;
+.item__actions .bookmark:active {
+    border-color: #c1c6ce;
 }
-.catalog-list__item:hover .item__hidden {
-	display: block;
+.catalog-list__item .image {
+    width:218px;
+    height:168px;
+    overflow: hidden;
+}
+.catalog-list__item .image img {
+	width:218px;
+    height:168px;
+}
+.catalog-list__item a {
+	min-height: 40px;
+    margin-bottom: 15px;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: "Sans", sans-serif;
+    line-height: 20px;
+    text-decoration: none;
+    color: #000;
+}
+.catalog-list__item .item__price {
+    position: relative;
+    width: 80px;
+    margin: 10px auto;
+    margin-bottom: 20px;
+    padding: 10px 30px;
+    color: #fff;
+    background: #ee3643;
+    border-radius: 3px;
+}
+.catalog-list__item .item__price:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: -20px;
+    width: 0;
+    height: 0;
+    border: 20px solid #fff;
+    border-left-color: #ee3643;
+}
+.catalog-list__item .item__old-price {
+	height: 20px;
+	margin-top: 15px;
+	margin-bottom: 10px;
+	color: #999;
+	text-decoration: line-through;
+}
+.catalog-list__item:nth-child(3n) .item__old-price {
+    
 }
 .main-content__paginator {
 	min-width: 300px;
@@ -1510,65 +1750,85 @@ body {
     background-position: -5px -5px;
 }
 
+.sprite--icon-bookmark {
+    width: 14px;
+    height: 16px;
+    background-position: -5px -31px;
+}
+
 .sprite--icon-down-dir {
     width: 11px;
     height: 10px;
-    background-position: -5px -31px;
+    background-position: -5px -57px;
+}
+
+.sprite--icon-exit {
+    width: 20px;
+    height: 17px;
+    background-position: -5px -77px;
 }
 
 .sprite--icon-facebook {
     width: 10px;
     height: 18px;
-    background-position: -5px -51px;
+    background-position: -5px -104px;
 }
 
 .sprite--icon-home {
     width: 15px;
     height: 12px;
-    background-position: -5px -79px;
+    background-position: -5px -132px;
 }
 
 .sprite--icon-instagramm {
     width: 17px;
     height: 17px;
-    background-position: -5px -101px;
+    background-position: -5px -154px;
 }
 
 .sprite--icon-logout {
     width: 21px;
     height: 17px;
-    background-position: -5px -128px;
+    background-position: -5px -181px;
 }
 
 .sprite--icon-phone {
     width: 19px;
     height: 19px;
-    background-position: -5px -155px;
+    background-position: -5px -208px;
+}
+
+.sprite--icon-right {
+    width: 8px;
+    height: 12px;
+    background-position: -5px -237px;
 }
 
 .sprite--icon-search {
     width: 17px;
     height: 17px;
-    background-position: -5px -184px;
+    background-position: -5px -259px;
 }
 
 .sprite--icon-up-dir {
     width: 11px;
     height: 10px;
-    background-position: -5px -211px;
+    background-position: -5px -286px;
 }
 
 .sprite--icon-user {
     width: 20px;
     height: 18px;
-    background-position: -5px -231px;
+    background-position: -5px -306px;
 }
 
 .sprite--icon-vk-copy {
     width: 20px;
     height: 12px;
-    background-position: -5px -259px;
+    background-position: -5px -334px;
 }
+
+
 .sprit-fl {
     background-image: url("../img/slider-filter.png/sprit-fl.png");
     background-repeat: no-repeat;
