--- a/css/normalize.css
+++ b/css/normalize.css
@@ -18,8 +18,12 @@ html {
 
 body {
   margin: 0;
+  
 }
 
+ul {
+  -webkit-padding-start: 0px;
+}
 /* HTML5 display definitions
    ========================================================================== */
 
